--- a/Assets/style.css
+++ b/Assets/style.css
@@ -82,3 +82,85 @@ color: var(--third-color);
         transform: translateY(0px);
     }
 }
+/*foot*/
+#con-foot{
+    border: 1px solid #C2C2C2 !important;
+    border-radius: 10px;
+}
+.other{
+    color: #C2C2C2;
+    font-size: 13px;
+    line-height: 23px;
+    font-family: 'Roboto';
+    margin-top: 30px;
+}
+.top h2{
+   
+    color: var(--second-color);
+    font-size: 30px;
+}.lo li{
+  margin-top: 15px;
+  font-size: 14px;
+ 
+  color: var(--second-color);
+}
+.lo li:hover{
+  
+    color: var(--first-color);
+    cursor: pointer;
+  }
+
+.ul{
+    margin-top: 20px;
+}
+.ul li{
+    margin-top: 15px;
+    font-size: 14px;
+    color: var(--second-color);
+}
+.ul li:hover{
+    margin-top: 15px;
+    font-size: 14px;
+    color: var(--first-color);
+    cursor: pointer;
+}
+ .mov{
+    margin-top: 50px;
+    margin-left: 30px;
+    color: #FFFFFF;
+    font-family: 'Roboto';
+  }
+  .mov-1{
+    color: #FFFFFF;
+    font-size: 12px;
+    line-height: 20px;
+
+  }#a{
+    padding-top: 15px !important;
+  }
+  .support{
+    line-height: 40px;
+    color: var(--second-color);
+    font-size: 13px;
+  }.support:hover{
+    line-height: 40px;
+    color: var(--first-color);
+    
+  }
+ .footer-ul
+  {
+    list-style-type: none;
+    padding-left: 0px;
+    margin-top: 10px;
+    margin-bottom: 20px;
+  }
+  .footer-links {
+    font-size: 13px;
+    color: #fff;
+    text-decoration: none;
+    text-align: left;
+  }
+  
+  .footer-links:hover {
+    color: var(--first-color);
+  }
