--- a/Assets/style.css
+++ b/Assets/style.css
@@ -409,8 +409,97 @@ margin-top: 35px !important;
     height: 100%;
     padding: 2px 11px 20px 12px !important;
 }
+/*mt5*/
+.img {
+    position: relative;
+    text-align: center;
+  
+  } .centered-1 {
+    text-align: center;
+        display: flex;
+        justify-content: center;
+     
+        color:var(--second-color);
+       
+        font-size: 30px;
+    }
+  
+    .rect-1 {
+      align-items: center;
+      justify-content: center;
+      background-image: url('../Assets/image/Group-7.png');
+      height: 377px;
+      width: 100%;
+      margin-top: 60px;
+      background-position: center;
+      background-repeat: no-repeat;
+      background-size: cover;
+      display: flex;
+      flex-direction: column;
+      opacity: 1;
+  }
+  .table {
+    border: 1px solid #666666;
+   
+  } 
+  .table thead  tr th{
+    width: 25%;
+    border: 1px solid #666666;
+    padding-top: 15px;
+    padding-bottom: 15px;
+    text-align: center;
+    color: var(--first-color);
+   
+  } .table tbody  tr td{
+    width: 25%;
+    border: 1px solid #666666;
+    padding-top: 15px;
+    padding-bottom: 15px;
+    color: #666666;
+    padding-left: 20px;
+  }.pread{
+    font-weight: bold !important;
+    color: var(--third-color) !important;
+  }
+  #arr-1{
+    width: 10% !important;
+  }
+  
+  /* #moo{
+    margin-top: -100px;
+  } */
+  .mts{
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    color: var(--first-color);
+    padding-top: 15px;
+  }.for{
+    margin-top: 20px;
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    font-weight: bold;
+    font-size: 20px;
+  }#five{
+    width: 35%;
+    height: 100px;
+   
+  }#pinks{
+    box-shadow: 0px 15px 35px #ff5151;
+    width: 24rem;height: 25rem;
+  }
 @media (max-width:578px){
-    
+    #arr-1 {
+        width: 25% !important;
+    }
+    #mup{
+        margin-top: 20px;
+    }
+    #pinks{
+        box-shadow: 0px 15px 35px #ff5151;
+        width: 20rem;height: 25rem;
+      }
     #spaces {
         margin-top: 630px !important;
         padding-top: 20px;
