--- a/Assets/style.css
+++ b/Assets/style.css
@@ -505,6 +505,7 @@ margin-top: 35px !important;
     margin-top: 30px;
   }#sas{
     margin-top: 50px;
+    background-color: var(--second-color) !important;
   }#laptop{
     width: 100%;
   }
