--- a/Assets/style.css
+++ b/Assets/style.css
@@ -494,9 +494,10 @@ margin-top: 35px !important;
     display: flex;
     justify-content: center;
     color: var(--third-color);
+    font-weight: bolder;
 
   }.csc{
-    margin-left: -100px !important;
+    margin-left: -45px !important;
   }.los{
     color: var(--first-color);
     font-size: 20px;
@@ -508,6 +509,9 @@ margin-top: 35px !important;
     background-color: var(--second-color) !important;
   }#laptop{
     width: 100%;
+  }#laptop-1{
+    width: 100%;
+    margin-top: -140px !important;
   }
 @media (max-width:578px){
     #arr-1 {
