--- a/Assets/style.css
+++ b/Assets/style.css
@@ -512,6 +512,11 @@ margin-top: 35px !important;
   }#laptop-1{
     width: 100%;
     margin-top: -140px !important;
+  }/*trading*/
+  .para-1{
+    color: var(--second-color);
+    font-size: 18px;
+    padding-top: 10px;
   }
 @media (max-width:578px){
     #arr-1 {
