--- a/Assets/style.css
+++ b/Assets/style.css
@@ -517,7 +517,65 @@ margin-top: 35px !important;
     color: var(--second-color);
     font-size: 18px;
     padding-top: 10px;
-  }
+  }.curr{
+    display: flex;
+     justify-content: center;
+     text-align: center;
+}#sps-1{
+    margin-top: 4%;
+}.num {
+    background-color:rgba(255, 236, 234, 1)  ;
+    padding: 10% 15.5%;
+    border-radius: 50%;
+    color: var(--first-color);
+    text-align: center;
+    margin-top: 50px;
+}
+.lowest{
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    height: 60px;
+    font-size: 20px;
+    margin-top: 20px;
+
+}.diff{
+    display: flex;
+    justify-content: center;
+    text-align: center;
+ color: #666666;
+    font-size: 16px;
+}.trust{
+    margin-top: 35px;
+    font-weight: 500;
+    color: #666666;
+    font-size: 19px;
+}#man{
+    width: 85%;
+}.wed{
+    margin-top: 15%;
+}#man-1{
+    width: 85%;
+    margin-top: 10%;
+}.trust-1{
+margin-top: 10%;
+}#sps-3{
+    padding-top: 8%;
+    padding-bottom: 8%;
+}.btn-4{
+    margin-top: 20px;
+    background-color: var(--four-color) !important;
+    color: var(--second-color) !important;
+    font-size: 13px !important;
+    padding-left: 20px !important;
+    padding-right: 20px !important;
+
+}.btn-4:hover{
+    background-color: var(--third-color) !important;
+    color: var(--second-color) !important;
+    border: 1px solid white;
+
+}
 @media (max-width:578px){
     #arr-1 {
         width: 25% !important;
