--- a/Assets/style.css
+++ b/Assets/style.css
@@ -525,7 +525,7 @@ margin-top: 35px !important;
     margin-top: 4%;
 }.num {
     background-color:rgba(255, 236, 234, 1)  ;
-    padding: 10% 15.5%;
+    padding: 10% 15%;
     border-radius: 50%;
     color: var(--first-color);
     text-align: center;
@@ -577,6 +577,25 @@ margin-top: 10%;
 
 }
 @media (max-width:578px){
+    #pink-color-2 {
+        display: flex;
+        flex-direction: column-reverse;
+    }
+    .num {
+        background-color: rgba(255, 236, 234, 1);
+        padding: 9% 12%;
+        border-radius: 50%;
+        color: var(--first-color);
+        text-align: center;
+        margin-top: 50px;
+    }.trust {
+        margin-top: 35px;
+        font-weight: 500;
+        color: #666666;
+        font-size: 15px;
+    }#do{
+        margin-top: 20px;
+    }
     #arr-1 {
         width: 25% !important;
     }
@@ -645,6 +664,13 @@ margin-top: 10%;
     }#blac {
         background-color: var(--third-color);
         height: 680px;
+    }.num {
+        background-color: rgba(255, 236, 234, 1);
+        padding: 10% 13.5%;
+        border-radius: 50%;
+        color: var(--first-color);
+        text-align: center;
+        margin-top: 50px;
     }
 }
 @media (min-width:1500px) and (max-width:1890px){
@@ -658,6 +684,13 @@ margin-top: 10%;
     }#blac {
         background-color: var(--third-color);
         height: 680px;
+    }.num {
+        background-color: rgba(255, 236, 234, 1);
+        padding: 10% 14%;
+        border-radius: 50%;
+        color: var(--first-color);
+        text-align: center;
+        margin-top: 50px;
     }
 }
 @media (min-width:1300px) and (max-width:1490px){
@@ -671,5 +704,12 @@ margin-top: 10%;
     }#blac {
         background-color: var(--third-color);
         height: 680px;
+    }.num {
+        background-color: rgba(255, 236, 234, 1);
+        padding: 10% 14%;
+        border-radius: 50%;
+        color: var(--first-color);
+        text-align: center;
+        margin-top: 50px;
     }
 }
