--- a/Assets/style.css
+++ b/Assets/style.css
@@ -440,6 +440,7 @@ margin-top: 35px !important;
   }
   .table {
     border: 1px solid #666666;
+    background-color: var(--second-color) !important;
    
   } 
   .table thead  tr th{
@@ -465,9 +466,9 @@ margin-top: 35px !important;
     width: 10% !important;
   }
   
-  /* #moo{
-    margin-top: -100px;
-  } */
+  #moo{
+    margin-top: 20px;
+  }
   .mts{
     display: flex;
     justify-content: center;
@@ -489,6 +490,7 @@ margin-top: 35px !important;
     box-shadow: 0px 15px 35px #ff5151;
     width: 24rem;height: 25rem;
   }
+  
   /*platform*/
   .web{
     display: flex;
