--- a/Assets/style.css
+++ b/Assets/style.css
@@ -612,6 +612,28 @@ margin-top: 10%;
     font-size: 17px;
     margin-top: 10%;
 }
+/*accpunt*/
+.table {
+    border: 1px solid #666666;
+    background-color: var(--second-color) !important;
+   
+  } 
+  #tab .table thead  tr th{
+    width: 0%;
+    border:none;
+    padding-top: 15px;
+    padding-bottom: 15px;
+    text-align: start;
+    color: var(--third-color);
+   
+  } #tab .table tbody  tr td{
+    width: 0%;
+    border:none;
+    padding-top: 15px;
+    padding-bottom: 15px;
+    color: #666666;
+    padding-left: 20px;
+  }
 @media (max-width:578px){
     #nsm{
         margin-top: 20px;
