--- a/Assets/style.css
+++ b/Assets/style.css
@@ -662,9 +662,134 @@ margin-top: 10%;
     margin-top: 50px;
 }
 
-/* #tab .table{
-    box-shadow: 0px 12px 78px #ff5151 ;
+/* .inr-2{
+    display: none !important;
+}.usd-2{
+    display: none !important;
 } */
+/* nuw */
+::selection{
+    color: #fff;
+    background: #675AFE;
+  }
+  .wrapper{
+    width: 370px;
+    padding: 30px;
+    border-radius: 7px;
+    background: #fff;
+    box-shadow: 7px 7px 20px rgba(0, 0, 0, 0.05);
+  }
+  .wrapper header{
+    font-size: 28px;
+    font-weight: 500;
+    text-align: center;
+  }
+  .wrapper form{
+    margin: 40px 0 20px 0;
+  }
+  form input{
+    width: 100%;
+    outline: none;
+padding-top: 5%;
+padding-bottom: 5%;
+    border-radius: 5px;
+    border: 1px solid var(--first-color);
+  } 
+  form input[value=INR]{
+  display: flex;
+  justify-content: end;
+  text-align: end;
+  font-size: 20px;
+    
+  }form input[value=USD]{
+    display: flex;
+    justify-content: end;
+    text-align: end;
+    font-size: 20px;
+      
+    }.inr{
+    display: none !important;
+}.usd{
+    display: none !important;
+}
+   
+  form p{
+    font-size: 18px;
+    margin-bottom: 5px;
+  }
+  /* form input{
+    height: 50px;
+    font-size: 17px;
+    padding: 0 15px;
+    border: 1px solid #999;
+  }
+  form input:focus{
+    padding: 0 14px;
+    border: 2px solid #675AFE;
+  } */
+  form .drop-list{
+    display: flex;
+    margin-top: 20px;
+    align-items: center;
+    justify-content: space-between;
+  }
+  /* .drop-list .select-box{
+    display: flex;
+    width: 115px;
+    height: 45px;
+    align-items: center;
+    border-radius: 5px;
+    justify-content: center;
+    border: 1px solid #999;
+  }
+  .select-box img{
+    max-width: 21px;
+  }
+  .select-box select{
+    width: auto;
+    font-size: 16px;
+    background: none;
+    margin: 0 -5px 0 5px;
+  }
+  .select-box select::-webkit-scrollbar{
+    width: 8px;
+  }
+  .select-box select::-webkit-scrollbar-track{
+    background: #fff;
+  }
+  .select-box select::-webkit-scrollbar-thumb{
+    background: #888;
+    border-radius: 8px;
+    border-right: 2px solid #ffffff;
+  } */
+  form .icon{
+    cursor: pointer;
+  
+    font-size: 22px;
+    display: flex;
+    justify-content: center;
+  }
+  form .exchange-rate{
+    font-size: 17px;
+    margin: 20px 0 30px;
+  }
+  form .bi{
+   border: 1px solid var(--first-color) !important;
+    border-radius: 50%;
+    padding: 5px 5px 5px 5px;
+    position: relative;
+  }
+  form button{
+    height: 52px;
+    color: #fff;
+    font-size: 17px;
+    cursor: pointer;
+    background: #675AFE;
+    transition: 0.3s ease;
+  }
+  form button:hover{
+    background: #4534fe;
+  }
 @media (max-width:578px){
     #nsm{
         margin-top: 20px;
