--- a/Assets/style.css
+++ b/Assets/style.css
@@ -95,7 +95,7 @@ color: var(--third-color);
     margin-top: 30px;
 }
 .top h2{
-   
+   padding-top:30px ;
     color: var(--second-color);
     font-size: 30px;
 }.lo li{
@@ -672,22 +672,19 @@ margin-top: 10%;
     color: #fff;
     background: #675AFE;
   }
-  .wrapper{
-    width: 370px;
-    padding: 30px;
-    border-radius: 7px;
-    background: #fff;
-    box-shadow: 7px 7px 20px rgba(0, 0, 0, 0.05);
-  }
-  .wrapper header{
+ 
+  .beneift header{
     font-size: 28px;
     font-weight: 500;
     text-align: center;
+ 
   }
-  .wrapper form{
-    margin: 40px 0 20px 0;
-  }
+ .beneift{
+    background-color: var(--second-color) !important;
+    padding: 25px 100px 25px 100px;
+ }
   form input{
+    margin-top: 30px;
     width: 100%;
     outline: none;
 padding-top: 5%;
@@ -706,10 +703,11 @@ padding-bottom: 5%;
     justify-content: end;
     text-align: end;
     font-size: 20px;
+    margin-top: 0px;
       
-    }.inr{
+    }.inr-1{
     display: none !important;
-}.usd{
+}.usd-1{
     display: none !important;
 }
    
@@ -717,51 +715,14 @@ padding-bottom: 5%;
     font-size: 18px;
     margin-bottom: 5px;
   }
-  /* form input{
-    height: 50px;
-    font-size: 17px;
-    padding: 0 15px;
-    border: 1px solid #999;
-  }
-  form input:focus{
-    padding: 0 14px;
-    border: 2px solid #675AFE;
-  } */
+ 
   form .drop-list{
     display: flex;
     margin-top: 20px;
     align-items: center;
     justify-content: space-between;
   }
-  /* .drop-list .select-box{
-    display: flex;
-    width: 115px;
-    height: 45px;
-    align-items: center;
-    border-radius: 5px;
-    justify-content: center;
-    border: 1px solid #999;
-  }
-  .select-box img{
-    max-width: 21px;
-  }
-  .select-box select{
-    width: auto;
-    font-size: 16px;
-    background: none;
-    margin: 0 -5px 0 5px;
-  }
-  .select-box select::-webkit-scrollbar{
-    width: 8px;
-  }
-  .select-box select::-webkit-scrollbar-track{
-    background: #fff;
-  }
-  .select-box select::-webkit-scrollbar-thumb{
-    background: #888;
-    border-radius: 8px;
-    border-right: 2px solid #ffffff;
-  } */
+ 
   form .icon{
     cursor: pointer;
   
@@ -770,8 +731,9 @@ padding-bottom: 5%;
     justify-content: center;
   }
   form .exchange-rate{
-    font-size: 17px;
-    margin: 20px 0 30px;
+    display: flex;
+    justify-content: end;
+    margin-top: 0px;
   }
   form .bi{
    border: 1px solid var(--first-color) !important;
@@ -779,17 +741,52 @@ padding-bottom: 5%;
     padding: 5px 5px 5px 5px;
     position: relative;
   }
-  form button{
+ .btn-7{
     height: 52px;
-    color: #fff;
-    font-size: 17px;
+    margin-top: 20px;
+    background-color: var(--four-color) !important;
+    color: var(--second-color) !important;
+    font-size: 13px !important;
+    padding-left: 35px !important;
+    padding-right: 35px !important;
+   
     cursor: pointer;
-    background: #675AFE;
-    transition: 0.3s ease;
-  }
-  form button:hover{
-    background: #4534fe;
-  }
+  
+
+
+}.btn-7:hover{
+    background-color: var(--third-color) !important;
+    color: var(--second-color) !important;
+    border: 1px solid white;
+
+}.num-2 {
+    background-color:rgba(255, 236, 234, 1)  ;
+    padding: 7% 11%;
+    border-radius: 50%;
+    color: var(--first-color);
+    text-align: center;
+    margin-top: 50px;
+}.num-3 {
+    background-color:rgba(255, 236, 234, 1)  ;
+    padding: 7% 10%;
+    border-radius: 50%;
+    color: var(--first-color);
+    text-align: center;
+    margin-top: 50px;
+}.diff-1 {
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    color: #666666;
+    font-size: 14px;
+}.lowest-1 {
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    height: 30px;
+    font-size: 20px;
+    margin-top: 20px;
+}
 @media (max-width:578px){
     #nsm{
         margin-top: 20px;
