--- a/Assets/style.css
+++ b/Assets/style.css
@@ -677,14 +677,14 @@ margin-top: 10%;
     font-size: 28px;
     font-weight: 500;
     text-align: center;
- 
+  height: 80px;
   }
  .beneift{
     background-color: var(--second-color) !important;
     padding: 25px 100px 25px 100px;
  }
   form input{
-    margin-top: 30px;
+    margin-top: 0px;
     width: 100%;
     outline: none;
 padding-top: 5%;
@@ -705,11 +705,7 @@ padding-bottom: 5%;
     font-size: 20px;
     margin-top: 0px;
       
-    }.inr-1{
-    display: none !important;
-}.usd-1{
-    display: none !important;
-}
+    }
    
   form p{
     font-size: 18px;
@@ -786,8 +782,31 @@ padding-bottom: 5%;
     height: 30px;
     font-size: 20px;
     margin-top: 20px;
-}
+}#inr-1{
+    display: none ;
+}#usd-1{
+    display: none ;}
+/* }#inr{
+    display: block ;
+}#usd{
+    display: block ;
+} */
 @media (max-width:578px){
+    .btn-7 {
+        height: 52px;
+        margin-top: 20px;
+        background-color: var(--four-color) !important;
+        color: var(--second-color) !important;
+        font-size: 13px !important;
+        padding-left: 0px !important;
+        padding-right: 0px !important;
+        cursor: pointer;
+    }.btn-7:hover{
+        background-color: var(--third-color) !important;
+        color: var(--second-color) !important;
+        border: 1px solid white;
+    
+    }
     #nsm{
         margin-top: 20px;
     }
