--- a/Assets/style.css
+++ b/Assets/style.css
@@ -490,7 +490,7 @@ margin-top: 35px !important;
     height: 100px;
    
   }#pinks{
-    box-shadow: 0px 15px 35px #ff5151;
+    box-shadow: 0px 28px 38px #fadada;
     width: 24rem;height: 25rem;
   }
   
@@ -846,7 +846,7 @@ padding-bottom: 5%;
         margin-top: 20px;
     }
     #pinks{
-        box-shadow: 0px 15px 35px #ff5151;
+        box-shadow: 0px 28px 38px #fadada;
         width: 20rem;height: 25rem;
       }
     #spaces {
