--- a/Assets/style.css
+++ b/Assets/style.css
@@ -428,7 +428,7 @@ margin-top: 35px !important;
       align-items: center;
       justify-content: center;
       background-image: url('../Assets/image/Group-7.png');
-      height: 390px;
+      height: 465px;
       width: 100%;
       margin-top: 0px;
       background-position: center;
@@ -697,6 +697,8 @@ padding-bottom: 5%;
   justify-content: end;
   text-align: end;
   font-size: 20px;
+  font-weight: 500;
+  padding-right: 15px;
     
   }form input[value=USD]{
     display: flex;
@@ -704,7 +706,8 @@ padding-bottom: 5%;
     text-align: end;
     font-size: 20px;
     margin-top: 0px;
-      
+    font-weight: 500;
+    padding-right: 15px;
     }
    
   form p{
