--- a/Assets/style.css
+++ b/Assets/style.css
@@ -34,8 +34,13 @@ body{
     color: #fff !important;
     text-decoration: none;
     
-}
+}.navbar-toggler {
+   background-color: var(--first-color) !important;
 
+}
+.navbar-toggler-icon{
+    color: var(--first-color) !important;
+}
 .nav-link-active {
     color:var(--first-color) !important;
     text-decoration: none;
