--- a/Assets/style.css
+++ b/Assets/style.css
@@ -801,6 +801,14 @@ padding-bottom: 5%;
  display: none;
 }
 @media (max-width:578px){
+    .num-1 {
+        background-color: rgba(255, 236, 234, 1);
+        padding: 10% 13%;
+        border-radius: 50%;
+        color: var(--first-color);
+        text-align: center;
+        margin-top: 50px;
+    }
     .num-2 {
         background-color:rgba(255, 236, 234, 1)  ;
         padding: 7% 10%;
